[project]
name = "nemosis"
version = "3.8.1"
description = "A tool for accessing AEMO data."
authors = [
    { name = "nick-gorman", email = "n.gorman305@gmail.com"},
    { name = "prakaa", email = "abiprakash007@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "pyarrow>=22.0.0",
    "feather-format>=0.4.1",
    "pandas>=2.2.3",
    "xlrd>=2.0.1",
    "beautifulsoup4>=4.12.3",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pyinstaller>=6.11.1",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Only src/nemosis ships in the wheel — the test suite and its AEMO
# archive .zip fixtures under tests/ are not bundled into the pip install.
packages = ["src/nemosis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
